--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
+    transition: opacity 1s, height 0s linear .15s , width 0s linear .15s;
 }
 
 .modal-container.visible {
@@ -94,11 +95,10 @@
     opacity: 1;
     width: 100%;
     font-size: 10rem;
-    
 }
 
 .modal {
-    width: 350px;
+    width: 70%;
     background-color: #fff;
     border-radius: 5px;
     transition: box-shadow .15s;
@@ -126,6 +126,10 @@
 .modal__content {
     margin: 1rem 1rem 1rem 5px;
     font-size: 1.5rem;
+}
+
+.modal__content.center{
+    text-align: center;
 }
 
 .modal__footer {
