--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,188 @@
 * {
-    box-sizing: border-box;
-    font-size: 62.5%;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --box-shadow : 0 0 5px 2px #ccc;
+  --box-shadow: 0 0 5px 2px #ccc;
 }
 .header__heading {
-    font-size: 3rem;
-    text-align: center;
-    white-space: nowrap;
+  font-size: 3rem;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .score {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .content__body {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-
+.choice-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .choice {
-    border: 5px solid black;
-    height: 250px;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    width: 250px;
+  border: 5px solid black;
+  height: 25rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  width: 25rem;
 }
 
 .choice__image {
-    height: 100%;
-    object-fit: contain;
-    width: 100%;
+  height: 100%;
+  object-fit: contain;
+  width: 100%;
 }
 
-
 .image__caption {
-    font-size: 2.5rem;
-    font-weight: bold;
-    text-align: center;
-    white-space: nowrap;
-
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .choice-heading {
-    font-size: 3rem;
-    margin-top: 1.5rem;
+  font-size: 3rem;
+  margin-top: 1.5rem;
 }
 
-
 .start-button {
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    margin-top: 1.5rem;
-    outline: 0;
-    transition: box-shadow .15s;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  font-size: 2rem;
+  margin-bottom: 0;
+  margin-top: 3rem;
+  outline: 0;
+  transition: box-shadow 0.15s;
 }
 
 .start-button:hover {
-    box-shadow: var(--box-shadow)
+  box-shadow: var(--box-shadow);
 }
 
-.inputs, .labels {
-    cursor: pointer;
+.inputs,
+.labels {
+  cursor: pointer;
 }
 
 .modal-container {
-    height: 0;
-    width: 0;
-    opacity: 0;
-    left: 0;
-    top: 0;
-    overflow: hidden;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.4);
-    transition: opacity 1s, height 0s linear .15s , width 0s linear .15s;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  height: 0;
+  justify-content: center;
+  left: 0;
+  opacity: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  transition: opacity 1s, height 0s linear 0.15s, width 0s linear 0.15s;
+  width: 0;
 }
 
 .modal-container.visible {
-    height: 100%;
-    opacity: 1;
-    width: 100%;
-    font-size: 10rem;
+  font-size: 10rem;
+  height: 100%;
+  opacity: 1;
+  width: 100%;
 }
 
 .modal {
-    width: 70%;
-    background-color: #fff;
-    border-radius: 5px;
-    transition: box-shadow .15s;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: box-shadow 0.15s;
+  width: 70%;
 }
-
 
 .modal:hover {
-    box-shadow: var(--box-shadow)
+  box-shadow: var(--box-shadow);
 }
 
-
 .modal__header {
-    /* background-color: blue; */
-    font-size: 2rem;
-    margin-left: 5px;
+  /* background-color: blue; */
+  font-size: 2rem;
+  margin-left: 5px;
 }
 
 .modal__content {
-    margin: 1rem 1rem 1rem 5px;
-    font-size: 1.5rem;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  margin: 1rem 1rem 1rem 5px;
 }
 
-.modal__content.center{
-    text-align: center;
+.modal__content.center {
+  text-align: center;
 }
 
 .modal__footer {
-    /* background-color: grey; */
-    font-size: 1.5rem;
-    font-style: italic;
+  /* background-color: grey; */
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+@media screen and (min-width: 728px) {
+  .content__body {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .choice {
+    height: 30rem;
+    margin: 0 2rem 2rem 2rem;
+    width: 25rem;
+  }
+
+  .start-button {
+    padding: 1rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header__heading,
+  .score {
+    font-size: 4rem;
+  }
+
+  .choice-heading {
+    font-size: 5rem;
+  }
+
+  .choice {
+    height: 50rem;
+    margin-bottom: 0;
+    width: 50rem;
+  }
+  .start-button {
+    margin: 0;
+    padding: 3rem;
+  }
+  .image__caption {
+    font-size: 4rem;
+  }
+  .inputs {
+    transform: scale(2);
+    vertical-align: middle;
+  }
+
+  .modal {
+    width: 30rem;
+    height: 10rem;
+  }
 }
