--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 :root {
   --box-shadow: 0 0 5px 2px #ccc;
 }
